학부모 화면 구현 작업중

--- a/woorischool/Info.plist
+++ b/woorischool/Info.plist
@@ -3,7 +3,17 @@
 <plist version="1.0">
 <dict>
 	<key>UIAppFonts</key>
-	<array/>
+	<array>
+		<string>NanumSquareRound-Bold</string>
+		<string>NanumSquareRound-Regular</string>
+		<string>NanumSquareRound-Light</string>
+		<string>NotoSansCJKkr-Black</string>
+		<string>NotoSansCJKkr-Bold</string>
+		<string>NotoSansCJKkr-Light</string>
+		<string>NotoSansCJKkr-Medium</string>
+		<string>NotoSansCJKkr-Regular</string>
+		<string>NotoSansCJKkr-Thin</string>
+	</array>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleExecutable</key>
