--- a/woorischool/Info.plist
+++ b/woorischool/Info.plist
@@ -2,18 +2,6 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>UIAppFonts</key>
-	<array>
-		<string>NanumSquareRound-Bold</string>
-		<string>NanumSquareRound-Regular</string>
-		<string>NanumSquareRound-Light</string>
-		<string>NotoSansCJKkr-Black</string>
-		<string>NotoSansCJKkr-Bold</string>
-		<string>NotoSansCJKkr-Light</string>
-		<string>NotoSansCJKkr-Medium</string>
-		<string>NotoSansCJKkr-Regular</string>
-		<string>NotoSansCJKkr-Thin</string>
-	</array>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleExecutable</key>
@@ -32,6 +20,22 @@
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>UIAppFonts</key>
+	<array>
+		<string>NanumSquareRound-Bold</string>
+		<string>NanumSquareRound-Regular</string>
+		<string>NanumSquareRound-Light</string>
+		<string>NotoSansCJKkr-Black</string>
+		<string>NotoSansCJKkr-Bold</string>
+		<string>NotoSansCJKkr-Light</string>
+		<string>NotoSansCJKkr-Medium</string>
+		<string>NotoSansCJKkr-Regular</string>
+		<string>NotoSansCJKkr-Thin</string>
+	</array>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>remote-notification</string>
+	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
