--- a/woorischool/Info.plist
+++ b/woorischool/Info.plist
@@ -32,6 +32,11 @@
 		<string>NotoSansCJKkr-Regular</string>
 		<string>NotoSansCJKkr-Thin</string>
 	</array>
+    <key>NSAppTransportSecurity</key>
+        <dict>
+            <key>NSAllowsArbitraryLoads</key>
+            <true/>
+        </dict>
 	<key>UIBackgroundModes</key>
 	<array>
 		<string>remote-notification</string>
