--- a/woorischool/Info.plist
+++ b/woorischool/Info.plist
@@ -55,6 +55,12 @@
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
 	</array>
+    <key>NSCameraUsageDescription</key>
+    <string>카메라를 사용합니다</string>
+    <key>NSLocationWhenInUseUsageDescription</key>
+    <string>현재 위치 정보를 불러옵니다.</string>
+    <key>NSPhotoLibraryUsageDescription</key>
+    <string>사진첩을 사용합니다</string>
 	<key>UISupportedInterfaceOrientations~ipad</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
