--- a/woorischool/Info.plist
+++ b/woorischool/Info.plist
@@ -27,8 +27,10 @@
 	</dict>
 	<key>NSCameraUsageDescription</key>
 	<string>카메라를 사용합니다</string>
-	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>현재 위치 정보를 불러옵니다.</string>
+	<key>NSLocationAlwaysUsageDescription</key>
+    <string>스팟에서 내 주변 가맹점 안내를 위해 필요합니다. 스팟에서 내 기기 위치에 액세스하도록 허용하시겠습니까?</string>
+    <key>NSLocationWhenInUseUsageDescription</key>
+    <string>스팟에서 내 주변 가맹점 안내를 위해 필요합니다. 스팟에서 내 기기 위치에 액세스하도록 허용하시겠습니까?</string>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>사진첩을 사용합니다</string>
 	<key>UIAppFonts</key>
